# LaneNetRos

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
include/: curve_fitting.h
launch/: curve_fitting.launch  lanenet.launch
model/: README.md
msg/: Curve.msg  Lane.msg  Lane_Image.msg
node/: curve_fitting.cpp
scripts/: lanenet_node.py
scripts/config/: global_config.py
scripts/lanenet_model/: lanenet_postprocess.py
